# Pydantic-Websockets

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: api_endpoints.md  architecture.md  design_notes.md
scripts/: generate_models.py
src/stock_ticker_api/: main.py
src/stock_ticker_api/auth/: auth.py
src/stock_ticker_api/models/: stock_model.py
src/stock_ticker_api/models/schemas/: stock_schema.json
src/stock_ticker_api/services/: stock_service.py
src/stock_ticker_api/sockets/: stock_socket.py
src/stock_ticker_api/utils/: helpers.py
tests/: conftest.py  test_stock_socket.py
