[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-ticker-api"
version = "0.1.0"
description = "Learning project: FastAPI real-time WebSocket stock ticker with Basic auth"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

dependencies = [
    "fastapi>=0.121.2,<0.122.0",
    "uvicorn>=0.38.0,<0.39.0",
    "pydantic>=2.12.4,<3.0.0",
    "datamodel-code-generator>=0.35.0,<0.36.0",
    "python-multipart>=0.0.9",
    "anyio>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "websockets>=13.1",
    "ruff>=0.6.9",
    "black>=24.10.0",
]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"stock_ticker_api.models.schemas" = ["*.json"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py313"
